--- a/app/src/main/res/layout/activity_demo.xml
+++ b/app/src/main/res/layout/activity_demo.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.screen.Demo_old">
+    tools:context="com.example.screen.Demo">
 
     <com.mapbox.mapboxsdk.maps.MapView
         android:id="@+id/mapDemo"
